--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
-    <div class="container">
-        <div class="form-containter sign-up">
+    <div class="container" id="container">
+        <div class="form-container sign-up">
             <form>
                 <h1>Create Account</h1>
                 <div class="social-icons">
@@ -34,7 +34,7 @@
             </form>
         </div>
         <div>
-            <div class="form-containter sign-in">
+            <div class="form-container sign-in">
                 <form>
                     <h1>Sign In</h1>
                     <div class="social-icons">
